# bytestring-lexing

./: .gitattributes  .gitignore  .travis.yml  ANN  AUTHORS  CHANGELOG  LICENSE  README  README.md  TODO  VERSION  bytestring-lexing.cabal
.github/workflows/: ci.yml
Data/ByteString/Lex/: Double.hs  Double.x  Internal.hs
Data/ByteString/Lex/Lazy/: Double.hs  Double.x
bench/: BenchCeilEightThirds.hs  BenchIsSpace.hs  BenchNumDigits.hs  BenchPackDecimal.hs  BenchReadDecimal.hs  BenchReadExponential.hs  WallclockIsSpace.hs  bytestring-lexing-bench.cabal
bench/BenchReadExponential/: Double.x  Internal.hs  NewImplementations.hs  results.txt
bench/html/: index.html  readDecimal-0.3.0_bistromath-win32.html  readDecimal-0.4.0_semiramis.html  readDecimal-0.5.0_ereshkigal.html  readExponential-0.5.0_ereshkigal.html
src/Data/ByteString/Lex/: Double.x  Fractional.hs  Integral.hs  Internal.hs
src/Data/ByteString/Lex/Lazy/: Double.x
test/: Fractional.hs  Integral.hs  Main.hs
test/bench/: BenchIsSpace.hs  BenchNumDigits.hs  BenchPackDecimal.hs  BenchReadDecimal.hs  Setup.hs  WallclockIsSpace.hs  bytestring-lexing-bench.cabal  readDecimal-0.4.0_Linux_GHC-7.0.4-64bit.html  readDecimal.hs
test/bench/html/: hscolour.css  index.css  index.html  readDecimal-0.3.0_bistromath.html  readDecimal-0.3.0_megadodo.html  undohtml.css
test/correctness/: Integral.hs
