Name:                bytestring-lexing
Version:             1.0
Synopsis:            Parse floating point literals efficiently from bytestrings
Description:         Parse floating point literals efficiently from strict or lazy bytestrings.
License:             BSD3
License-file:        LICENSE
Category:            Data
Copyright:           Copyright (c) Don Stewart 2008-2011
Author:              Don Stewart
Maintainer:          dons00@gmail.com
Stability:           stable
Homepage:            http://code.haskell.org/~dons/code/bytestring-lexing
Tested-With:         GHC ==6.8.2, GHC ==6.10.1, GHC ==7.0.3
Build-Type:          Simple
Cabal-Version:       >= 1.2

flag small_base
    description: Choose the new smaller, split-up base package.

library
  exposed-modules:   Data.ByteString.Lex.Double
                     Data.ByteString.Lex.Lazy.Double
  other-modules:     Data.ByteString.Lex.Internal

  if flag(small_base)
      build-depends: base >= 3 && < 5, bytestring, array
  else
      build-depends: base < 3

  ghc-options:       -O2

  -- when bytestring-posn was added (2008):
  build-tools:       alex >= 2.3
